# tokens

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: install-linux.md  install-macos.md  install-windows.md  schema.md
migrations/: 001_init.sql
registry/: platforms.yaml
scripts/: fetch-logos.ps1  fetch-logos.sh
src/: lib.rs  main.rs  paths.rs  registry.rs  scan_filter.rs
src/adapters/: chatbox.rs  cherry_studio.rs  claude_code.rs  cline.rs  codex.rs  cursor.rs  hermes.rs  kilo.rs  mod.rs  openclaw.rs  opencode.rs  optional.rs  optional_api.rs  pi.rs  qoder.rs  qwen_code.rs
src/cli/: boxdraw.rs  branding.rs  display.rs  mod.rs
src/db/: mod.rs  store.rs
src/ingest/: mod.rs
src/model/: mod.rs
src/paths/: discovery.rs  host.rs  user_config.rs
src/serve/: daemon.rs  dashboard.app.js  logos.rs  mod.rs  theme.rs  themed_logos.rs  web.rs
src/serve/themes/: default.html  ink.html  paper.html  pixel.html  terminal.html
src/setup/: defaults.rs  mod.rs  probe.rs
src/util/: format.rs  json_extract.rs  mod.rs  sqlite_ext.rs
tests/: claude_fixture.jsonl  codex_fixture.jsonl  cursor_db_smoke.rs  integration.rs  path_expand.rs
